--- a/AVCaptureManager/Info.plist
+++ b/AVCaptureManager/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016-2020年 Takashi Mochizuki. All rights reserved.</string>
+	<string>Copyright © 2016-2022年 Takashi Mochizuki. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
